--- a/oasis/package.json
+++ b/oasis/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.30.0",
     "@heroui/navbar": "^2.2.20",
     "@heroui/react": "^2.7.11",
     "@heroui/system": "^2.4.18",
